Fix having to "double click" on mobile nav in order to expand items by taking the JS from the Portworx site.
Fix active page expand in sidebar

--- a/_sass/portworx.master.scss
+++ b/_sass/portworx.master.scss
@@ -8581,8 +8581,13 @@ section.pull-quote .container:after {
 	    	transition: all 0.5s ease;
 	    }
 
-	    &.open>a {
-	        color: #ddd;
+	    &.open {
+	        &>a {
+	            color: #ddd;
+	        }
+	        &>ul {
+	        	display: block !important;
+	        }
 		}
 	}
 
@@ -8601,6 +8606,10 @@ section.pull-quote .container:after {
 
     .navbar-toggle {
     	background: none !important;
+    }
+
+    .mobile-close {
+    	font-size: 1.5em !important;
     }
 
 }
